fix: make post date not ugly on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,7 @@ div.content > section > ul.posts > li > a > div.metadata > p {
   justify-content: center;
   align-items: center;
   border-radius: 4px;
+  max-height: 23px;
   font-size: 11px;
   display: flex;
 }
@@ -427,6 +428,18 @@ div.content > div.metadata > div > p {
 
   div.content > div.metadata > div {
     display: none;
+  }
+
+  div.metadata > h1 {
+    font-size: 16px;
+  }
+
+  ul.posts > li > a > p {
+    font-size: 12px;
+  }
+
+  ul.posts > li > a {
+    padding: 10px !important;
   }
 }
 
